--- a/package.json
+++ b/package.json
@@ -14,6 +14,9 @@
 		"smui-theme-light": "smui-theme compile static/smui.css -i src/theme",
 		"smui-theme-dark": "smui-theme compile static/smui-dark.css -i src/theme/dark"
 	},
+	"overrides": {
+		"cookie": "^1.0.2"
+	},
 	"dependencies": {
 		"@monaco-editor/loader": "^1.5.0",
 		"@smui/button": "^8.0.0-beta.3",
@@ -32,24 +35,24 @@
 		"@smui/switch": "^8.0.0-beta.3",
 		"@smui/textfield": "^8.0.0-beta.3",
 		"@smui/top-app-bar": "^8.0.0-beta.3",
-		"@sveltejs/adapter-auto": "^4.0.0",
+		"@sveltejs/adapter-auto": "^6.0.0",
 		"@sveltejs/adapter-static": "^3.0.8",
-		"@threlte/core": "^8.0.1",
-		"@threlte/extras": "^9.0.1",
-		"@types/three": "^0.173.0",
+		"@threlte/core": "^8.0.2",
+		"@threlte/extras": "^9.1.4",
+		"@types/three": "^0.175.0",
 		"monaco-editor": "^0.52.2",
 		"smui-theme": "^8.0.0-beta.3",
-		"svelte": "^5.0.0",
+		"svelte": "^5.26.2",
 		"svelte-splitpanes": "^8.0.9",
-		"three": "^0.173.0",
-		"urdf-viewer": "^0.2.7"
+		"three": "^0.175.0",
+		"urdf-viewer": "^0.2.8"
 	},
 	"type": "module",
 	"devDependencies": {
-		"@sveltejs/kit": "^2.16.0",
-		"svelte-check": "^4.0.4",
+		"@sveltejs/kit": "^2.20.8",
+		"svelte-check": "^4.1.6",
 		"svelte-sequential-preprocessor": "^2.0.2",
-		"typescript": "^5.6.3",
+		"typescript": "^5.8.3",
 		"vite": "^6.0.0"
 	}
 }
